// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should be rendered correctly 1`] = `
<div
  className="alertWrapper color-blue root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="content"
    />
  </div>
</div>
`;

exports[`Alert should be rendered correctly 2`] = `
<div
  className="alertWrapper color-amber root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    >
      <div
        className="actionWrapper"
      >
        <button
          className="container uui-button-box uui-enabled -clickable root size-24 linkButton-color-blue uui-no-left-icon uui-no-right-icon actionLink"
          href={null}
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="uui-caption"
          >
            ACTION 1
          </div>
        </button>
      </div>
    </div>
    <button
      className="container uui-button-box uui-enabled -clickable root icon-color-gray60 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`ErrorAlert should be rendered correctly 1`] = `
<div
  className="alertWrapper color-red root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
  </div>
</div>
`;

exports[`HintAlert should be rendered correctly 1`] = `
<div
  className="alertWrapper color-blue root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
  </div>
</div>
`;

exports[`SuccessAlert should be rendered correctly 1`] = `
<div
  className="alertWrapper color-green root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
  </div>
</div>
`;

exports[`WarningAlert should be rendered correctly 1`] = `
<div
  className="alertWrapper color-amber root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
  </div>
</div>
`;
